# ProjetoDIO-FastAPI

./: .env  Dockerfile  alembic.ini  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 2404839cb7fd_criação_das_tabelas_iniciais.py  5ae5f3732972_versão_inicial_completa_do_schema.py  7426d76acf3e_recriação_das_tabelas_com_nomes_.py
tests/: conftest.py
tests/atleta/: test_atleta.py
workout_api/: .env
workout_api/atleta/: controller.py  router.py  schemas.py
workout_api/categoria/: controller.py  router.py  schemas.py
workout_api/centro_treinamento/: controller.py  router.py  schemas.py
workout_api/configs/: database.py  settings.py
workout_api/contrib/: models.py  schemas.py
workout_api/routers/: routers.py
