[project]
name = "projetodio-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Pereira",email = "gdnp@academico.ufpb.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]

[tool.poetry]
packages = [{include = "projetodio_fastapi", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
